# WindingControl

./: .gitignore  CMakeLists.txt  CameraSettings.md  OpenCVCam.cpp  README  README.md  README.txt  TestsForArchitecture.ipynb  WindingControl.cpp  WindingControl.h  WindingControl.py  WindingControl2.0.py  WindingControlMain.cpp  WindingControlNew.ipynb  WindingControlTraining.ipynb  WindingControlTraining2.ipynb  WindingControl_MutipleTrains.ipynb  WindingControl_old.py  WindingTest.cpp  WindingTest.h  WindingTestMain.cpp  WindingTracking.cpp  WindingTracking.h  WoCamera_Test.py  config00.ini  plotmaker.ipynb  pythonImageacq.py  sliderex.py  stab.cpp
.ipynb_checkpoints/: WindingControlNew-checkpoint.ipynb  plotmaker-checkpoint.ipynb
InternalNote_V0/latex/: LHCb-PAPER.bib  LHCb.bst  hardware.tex  introduction.tex  lhcb-symbols-list.tex  main.aux  main.bbl  main.bib  main.blg  main.out  main.tex  qualityrequirements.tex  results.tex  scifi.bib  software.bib  software.tex  summary.tex  title-LHCb-ANA.tex  title-LHCb-CONF.tex  title-LHCb-INT.tex  title-LHCb-PAPER.tex  winding.tex
InternalNote_V0/latex/figs/: Blob.tex  Mat_Fail2Layer.tex  sheme.key
Videostab/: CMakeLists.txt  stab.cpp
cmake/: FindROOT.cmake
cpp-stuff/: CMakeLists.txt  WindingControl.h  WindingControlMain.cpp
cpp-stuff/cmake/: FindmvIMPACT.cmake
